--- a/harpy/logging.conf
+++ b/harpy/logging.conf
@@ -21,9 +21,9 @@ qualname=harpy
 class=logging.FileHandler
 level=DEBUG
 formatter=harpy_formatter
-args=("/var/log/harpy-error.log", "a")
+args=("/var/log/harpy.log", "a")
 
 [formatter_harpy_formatter]
-format=%(asctime)s %(name)s %(threadName)s %(levelname)s > %(message)s
+format=%(asctime)s %(name)s %(threadName)s %(levelname)s -- %(message)s
 datefmt=%b %e %Y %H:%M:%S
 class=logging.Formatter
